--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1951,7 +1951,9 @@ LeadSummaryScreen As screen:
 
         borderNotificationLSS As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
-            Height: =If(Parent.Height<500,Parent.Height/1.5,Parent.Height/3)
+            Height: |
+                =//If(Parent.Height<500,Parent.Height/1.5,Parent.Height/3)
+                If(Parent.Width<500 && Parent.Height<500,260,Parent.Width>500 ,300)
             Width: =If(Parent.Width<1000,Parent.Width/1.2,Parent.Width/2)
             X: =(Parent.Width-Self.Width)/2
             Y: =(Parent.Height-Self.Height)/2
@@ -1971,7 +1973,7 @@ LeadSummaryScreen As screen:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.None
                 FillPortions: =0
-                Height: =Parent.Height/3
+                Height: =If(Parent.Width<500,60,80)
                 LayoutDirection: =LayoutDirection.Vertical
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
@@ -2133,7 +2135,9 @@ LeadSummaryScreen As screen:
 
         borderErrorLSS As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
-            Height: =If(Parent.Height<500,Parent.Height/1.5,Parent.Height/3)
+            Height: |
+                =//If(Parent.Height<500,Parent.Height/1.5,Parent.Height/3)
+                If(Parent.Width<500 && Parent.Height<500,260,Parent.Width>500 ,300)
             Width: =If(Parent.Width<1000,Parent.Width/1.2,Parent.Width/2)
             X: =(Parent.Width-Self.Width)/2
             Y: =(Parent.Height-Self.Height)/2
@@ -2153,7 +2157,7 @@ LeadSummaryScreen As screen:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.None
                 FillPortions: =0
-                Height: =Parent.Height/3
+                Height: =If(Parent.Width<500,60,80)
                 LayoutDirection: =LayoutDirection.Vertical
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
