--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -240,13 +240,10 @@ DashboardScreen As screen:
 
         ctnMiddleDS As groupContainer.verticalAutoLayoutContainer:
             Fill: =RGBA(255, 255, 255, 1)
-            FillPortions: =0
-            Height: =Parent.Height-ctnHeaderDS.Height-ctnUserNameDS.Height-20
+            Height: =If(Parent.Height>Parent.Width,Parent.Height-ctnHeaderDS.Height-ctnUserNameDS.Height-20,Parent.Height-ctnHeaderDS.Height-ctnUserNameDS.Height)
             LayoutAlignItems: =LayoutAlignItems.Center
             LayoutDirection: =LayoutDirection.Vertical
             LayoutGap: =5
-            LayoutMinHeight: =100
-            LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             LayoutOverflowY: =LayoutOverflow.Scroll
             PaddingBottom: =5
@@ -255,9 +252,7 @@ DashboardScreen As screen:
             ZIndex: =4
 
             ctnLeadsButtonDS As groupContainer.horizontalAutoLayoutContainer:
-                AlignInContainer: =AlignInContainer.Center
                 DropShadow: =DropShadow.None
-                FillPortions: =0
                 Height: |
                     =//180
                     //Parent.Height/5.5
@@ -265,23 +260,17 @@ DashboardScreen As screen:
                 LayoutAlignItems: =LayoutAlignItems.Center
                 LayoutGap: =10
                 LayoutJustifyContent: =LayoutJustifyContent.Center
-                LayoutMinHeight: =100
-                LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
                 Width: =Parent.Width
                 ZIndex: =1
 
                 ctnOpenLeadsDS As groupContainer.manualLayoutContainer:
-                    AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(116, 116, 116, 1)
                     BorderThickness: =1
                     DropShadow: =DropShadow.Semilight
                     Fill: =RGBA(219, 219, 219, 1)
-                    FillPortions: =0
                     Height: |
                         =Parent.Height/1.08
-                    LayoutMinHeight: =80
-                    LayoutMinWidth: =250
                     Width: =Parent.Width/3.35
                     ZIndex: =1
 
@@ -381,16 +370,12 @@ DashboardScreen As screen:
                             ZIndex: =4
 
                 ctnInprogressLeadsDS As groupContainer.manualLayoutContainer:
-                    AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(116, 116, 116, 1)
                     BorderThickness: =1
                     DropShadow: =DropShadow.Semilight
                     Fill: =RGBA(219, 219, 219, 1)
-                    FillPortions: =0
                     Height: |
                         =Parent.Height/1.08
-                    LayoutMinHeight: =80
-                    LayoutMinWidth: =250
                     Width: =Parent.Width/3.35
                     ZIndex: =2
 
@@ -489,16 +474,12 @@ DashboardScreen As screen:
                             ZIndex: =4
 
                 ctnRejectedLeadsDS As groupContainer.manualLayoutContainer:
-                    AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(116, 116, 116, 1)
                     BorderThickness: =1
                     DropShadow: =DropShadow.Semilight
                     Fill: =RGBA(219, 219, 219, 1)
-                    FillPortions: =0
                     Height: |
                         =Parent.Height/1.08
-                    LayoutMinHeight: =80
-                    LayoutMinWidth: =250
                     Width: =Parent.Width/3.35
                     ZIndex: =3
 
@@ -600,9 +581,7 @@ DashboardScreen As screen:
                             ZIndex: =7
 
             ctnLeadsButtonsDS As groupContainer.horizontalAutoLayoutContainer:
-                AlignInContainer: =AlignInContainer.Center
                 DropShadow: =DropShadow.None
-                FillPortions: =0
                 Height: |
                     =//180
                     //Parent.Height/5.5
@@ -610,22 +589,16 @@ DashboardScreen As screen:
                 LayoutAlignItems: =LayoutAlignItems.Center
                 LayoutGap: =10
                 LayoutJustifyContent: =LayoutJustifyContent.Center
-                LayoutMinHeight: =100
-                LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
                 Width: =Parent.Width
                 ZIndex: =3
 
                 ctnQuatedLeadsDS As groupContainer.manualLayoutContainer:
-                    AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(116, 116, 116, 1)
                     BorderThickness: =1
                     DropShadow: =DropShadow.Semilight
                     Fill: =RGBA(219, 219, 219, 1)
-                    FillPortions: =0
                     Height: =Parent.Height/1.05
-                    LayoutMinHeight: =80
-                    LayoutMinWidth: =250
                     Width: =Parent.Width/2.2
                     ZIndex: =1
 
@@ -746,15 +719,11 @@ DashboardScreen As screen:
                             ZIndex: =4
 
                 ctnSoldLeadsDS As groupContainer.manualLayoutContainer:
-                    AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(116, 116, 116, 1)
                     BorderThickness: =1
                     DropShadow: =DropShadow.Semilight
                     Fill: =RGBA(219, 219, 219, 1)
-                    FillPortions: =0
                     Height: =Parent.Height/1.05
-                    LayoutMinHeight: =80
-                    LayoutMinWidth: =250
                     Width: =Parent.Width/2.2
                     ZIndex: =2
 
@@ -882,16 +851,12 @@ DashboardScreen As screen:
                             ZIndex: =4
 
             ctnCreateLeadDS As groupContainer.manualLayoutContainer:
-                AlignInContainer: =AlignInContainer.Center
                 BorderColor: =RGBA(255, 0, 0, 1)
                 BorderThickness: =1
                 DropShadow: =DropShadow.Semilight
-                FillPortions: =0
                 Height: |-
                     =//Parent.Height/10
                     If(Parent.Height<Parent.Width,Parent.Height/8,Parent.Height/14)
-                LayoutMinHeight: =100
-                LayoutMinWidth: =250
                 Width: |-
                     =//Parent.Width-50
                     Parent.Width/1.08
@@ -956,12 +921,8 @@ DashboardScreen As screen:
                     ZIndex: =1
 
             ctnforSpaceLeadDS As groupContainer.manualLayoutContainer:
-                AlignInContainer: =AlignInContainer.Center
                 DropShadow: =DropShadow.None
-                FillPortions: =0
                 Height: =Parent.Height-ctnCreateLeadDS.Height-ctnLeadsButtonDS.Height-ctnLeadsButtonDS.Height-100
-                LayoutMinHeight: =100
-                LayoutMinWidth: =250
                 RadiusBottomLeft: =0
                 RadiusBottomRight: =0
                 RadiusTopLeft: =0
