--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -249,7 +249,7 @@ SubmittedLeadScreen As screen:
                         )
                     Layout: =Layout.Vertical
                     TemplatePadding: =0
-                    TemplateSize: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",280,220)
+                    TemplateSize: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",320,220)
                     Visible: |
                         =ThisItem.IsSelected && locInfoExpanded
                     Width: =If(Parent.Width>1000,Parent.Width,Parent.Width/1.05)
@@ -428,7 +428,7 @@ SubmittedLeadScreen As screen:
                         BorderThickness: =4
                         Color: =RGBA(0, 0, 0, 0)
                         Fill: =RGBA(0, 0, 0, 0)
-                        Height: =borderLeadsSLS.Height/1.06
+                        Height: =borderLeadsSLS.Height
                         HoverColor: =RGBA(0, 0, 0, 0)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         OnSelect: |
@@ -710,7 +710,7 @@ SubmittedLeadScreen As screen:
             ctnSearchBarSLS As groupContainer.horizontalAutoLayoutContainer:
                 DropShadow: =DropShadow.None
                 Fill: =RGBA(255, 255, 255, 1)
-                Height: =80
+                Height: =If(Parent.Width>800,60,80)
                 LayoutAlignItems: =LayoutAlignItems.Center
                 LayoutMode: =LayoutMode.Auto
                 PaddingLeft: =2
@@ -726,7 +726,7 @@ SubmittedLeadScreen As screen:
                     DisabledBorderColor: =RGBA(255, 0, 0, 1)
                     FocusedBorderThickness: =2
                     Font: =Font.Arial
-                    Height: =60
+                    Height: =If(Parent.Width>800,40,60)
                     HintText: ="Search leads by  tracking number or contract number or building name or address or zipcode "
                     HoverBorderColor: =RGBA(255, 0, 0, 1)
                     HoverFill: =RGBA(0, 0, 0, 0)
@@ -752,7 +752,7 @@ SubmittedLeadScreen As screen:
                     BorderThickness: =2
                     Color: =RGBA(116, 116, 116, 1)
                     FocusedBorderThickness: =1
-                    Height: =60
+                    Height: =If(Parent.Width>800,40,60)
                     Icon: =Icon.Search
                     OnSelect: |-
                         =UpdateContext({locInfoExpanded:true})
@@ -771,6 +771,7 @@ SubmittedLeadScreen As screen:
                 Height: =80
                 LayoutAlignItems: =LayoutAlignItems.Center
                 LayoutGap: =10
+                LayoutJustifyContent: =LayoutJustifyContent.End
                 LayoutMode: =LayoutMode.Auto
                 PaddingLeft: =2
                 Width: =Parent.Width/1.04
@@ -779,11 +780,12 @@ SubmittedLeadScreen As screen:
                 ZIndex: =6
 
                 Label4_1 As label:
+                    Align: =Align.Right
                     Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     FontWeight: =FontWeight.Semibold
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
-                    Text: ="Sort by order"
+                    Text: ="Sort by column"
                     Width: =If(Parent.Width>500,Parent.Width/2.4,Parent.Width/3)
                     X: =Parent.Width-Self.Width
                     Y: =10
@@ -809,7 +811,9 @@ SubmittedLeadScreen As screen:
                     SelectionFill: =RGBA(237, 237, 237, 1)
                     SelectMultiple: =false
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
-                    Width: =Parent.Width/2
+                    Width: |-
+                        =//Parent.Width/2
+                        200
                     ZIndex: =2
 
                 Icon1 As icon.ArrowsUpDown:
