--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -934,7 +934,7 @@ CreatLeadScreen As screen:
             Fill: =RGBA(255, 255, 255, 1)
             Height: |
                 =//If(Parent.Height<500,Parent.Height/1.5,Parent.Height/3)
-                If(Parent.Width<500 && Parent.Height<500,260,Parent.Width>500 ,300)
+                If(Parent.Width<500 || Parent.Height<500,260,Parent.Width>500 ,300)
             Width: =If(Parent.Width<1000,Parent.Width/1.2,Parent.Width/2)
             X: =(Parent.Width-Self.Width)/2
             Y: =(Parent.Height-Self.Height)/2
@@ -1005,7 +1005,7 @@ CreatLeadScreen As screen:
             Fill: =RGBA(255, 255, 255, 1)
             Height: |
                 =//If(Parent.Height<500,Parent.Height/1.5,Parent.Height>500 ,Parent.Height/3,Parent.Height>800,Parent.Height/4.5)
-                If(Parent.Width<500 && Parent.Height<500,260,Parent.Width>500 ,300)
+                If(Parent.Width<500 ||Parent.Height<500,260,Parent.Width>500 ,300)
             Width: =If(Parent.Width<1000,Parent.Width/1.2,Parent.Width/2)
             X: =(Parent.Width-Self.Width)/2
             Y: =(Parent.Height-Self.Height)/2
@@ -1080,7 +1080,7 @@ CreatLeadScreen As screen:
             Height: |
                 =//If(Parent.Height<500,Parent.Height/1.5,Parent.Height/3)
                 //If(Parent.Height<500,270,Parent.Height>500 ,300)
-                If(Parent.Width<500 && Parent.Height<500,260,Parent.Width>500 ,300)
+                If(Parent.Width<500 || Parent.Height<500,260,Parent.Width>500 ,300)
             Width: =If(Parent.Width<1000,Parent.Width/1.2,Parent.Width/2)
             X: =(Parent.Width-Self.Width)/2
             Y: =(Parent.Height-Self.Height)/2
@@ -1123,8 +1123,7 @@ CreatLeadScreen As screen:
                 Height: =100
                 Size: =14
                 Text: |
-                    =
-                        "Getting contract record. Please wait."
+                    =    "Getting contract record. Please wait."
                 Width: =Parent.Width
                 ZIndex: =2
 
